UC#2 Create list balance transactions endpoint

--- a/MyWebApiProject/appsettings.json
+++ b/MyWebApiProject/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"Stripe": {
+		"SecretKey": "sk_test_4eC39HqLyjWDarjtT1zdp7dc"
+	}
 }
